
[TestLexingKeywords - 1]
[]parser.Token{
    &parser.TFn{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:3},
        },
    },
    &parser.TVar{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:4},
            End:   ast.Location{Line:1, Column:7},
        },
    },
    &parser.TVal{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:8},
            End:   ast.Location{Line:1, Column:11},
        },
    },
}
---

[TestLexingOperators - 1]
[]parser.Token{
    &parser.TPlus{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:2},
        },
    },
    &parser.TMinus{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:3},
            End:   ast.Location{Line:1, Column:4},
        },
    },
    &parser.TAsterisk{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:5},
            End:   ast.Location{Line:1, Column:6},
        },
    },
    &parser.TSlash{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:7},
            End:   ast.Location{Line:1, Column:8},
        },
    },
    &parser.TEquals{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:9},
            End:   ast.Location{Line:1, Column:10},
        },
    },
}
---

[TestLexingIdentifiers - 1]
[]parser.Token{
    &parser.TIdentifier{
        Value: "foo",
        span:  ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:4},
        },
    },
    &parser.TIdentifier{
        Value: "bar",
        span:  ast.Span{
            Start: ast.Location{Line:2, Column:1},
            End:   ast.Location{Line:2, Column:4},
        },
    },
}
---

[TestLexingLiterals - 1]
[]parser.Token{
    &parser.TString{
        Value: "hello",
        span:  ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:7},
        },
    },
}
---

[TestLexingParens - 1]
[]parser.Token{
    &parser.TIdentifier{
        Value: "a",
        span:  ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:2},
        },
    },
    &parser.TAsterisk{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:3},
            End:   ast.Location{Line:1, Column:4},
        },
    },
    &parser.TOpenParen{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:5},
            End:   ast.Location{Line:1, Column:6},
        },
    },
    &parser.TIdentifier{
        Value: "b",
        span:  ast.Span{
            Start: ast.Location{Line:1, Column:6},
            End:   ast.Location{Line:1, Column:7},
        },
    },
    &parser.TPlus{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:8},
            End:   ast.Location{Line:1, Column:9},
        },
    },
    &parser.TIdentifier{
        Value: "c",
        span:  ast.Span{
            Start: ast.Location{Line:1, Column:10},
            End:   ast.Location{Line:1, Column:11},
        },
    },
    &parser.TCloseParen{
        span: ast.Span{
            Start: ast.Location{Line:1, Column:11},
            End:   ast.Location{Line:1, Column:12},
        },
    },
}
---
